--- a/content/AI/5_4.md
+++ b/content/AI/5_4.md
@@ -90,7 +90,7 @@ ShowCodeCopyButtons: true
 + Dropout 是一種在訓練時隨機「關閉」一些神經元的技術：
   + **原理**: 每次訓練時隨機讓部分神經元停止工作，迫使網路學習多樣化的特徵表示。
   + **效果**: 相當於訓練多個不同的子網路並進行集成，減少過擬合。
-  + 就像讓學生在不同情境下解題，培養靈活運用知識的能力，而不是死記硬背。
+  + 就像是把眾多試題中的部分問題跳過不練習，避免學生學習到「特殊解」反而忘記了「一般解」。
   ```python
     model = tf.keras.Sequential([
         tf.keras.layers.Dense(512, activation='relu'),
