--- a/content/AI/5_4.md
+++ b/content/AI/5_4.md
@@ -88,10 +88,10 @@ ShowCodeCopyButtons: true
 
 # Dropout
 + Dropout 是一種在訓練時隨機「關閉」一些神經元的技術：
-  + **原理**: 每次訓練時隨機讓部分神經元停止工作，迫使網路學習多樣化的特徵表示。
-  + **效果**: 相當於訓練多個不同的子網路並進行集成，減少過擬合。
-  + 就像是把眾多試題中的部分問題跳過不練習，避免學生學習到「特殊解」反而忘記了「一般解」。
-  ```python
+    + **原理**: 每次訓練時隨機讓部分神經元停止工作，迫使網路學習多樣化的特徵表示。
+    + **效果**: 相當於訓練多個不同的子網路並進行集成，減少過擬合。
+    + 就像是把眾多試題中的部分問題跳過不練習，避免學生學習到「特殊解」反而忘記了「一般解」。
+    ```python
     model = tf.keras.Sequential([
         tf.keras.layers.Dense(512, activation='relu'),
         tf.keras.layers.Dropout(0.5),  # 50% 的神經元會被隨機關閉
@@ -102,4 +102,8 @@ ShowCodeCopyButtons: true
 
     model.fit(x_train, y_train, epochs=100)
     model.evaluate(x_test, y_test)
-  ```
+    ```
+    + 注意： Drop out 的流程是
+        + 在 training 時依照 **丟棄率(dropout rate)** 隨機將某些特徵值歸零。
+        + 在輸出時，根據丟棄率對 dropout 後的輸出值做放大。
+        + **在測試時，不丟棄任何特徵值**。
