--- a/content/leetcode_list/sliding_window_dblptr/1984.md
+++ b/content/leetcode_list/sliding_window_dblptr/1984.md
@@ -20,7 +20,7 @@ ShowBreadCrumbs: true
 ShowPostNavLinks: true
 ShowCodeCopyButtons: true
 ---
-+ 這是一題簡單的定長度 sliding window。先排序再用滑動窗口求值。時間複雜度是 \\(n\log(n)\\)
++ 這是一題簡單的定長度 sliding window。先排序再用滑動窗口求值。時間複雜度是 \\(O(n\log(n))\\)
 ```cpp
 class Solution {
 public:
