--- a/content/leetcode_list/sliding_window_dblptr/3090.md
+++ b/content/leetcode_list/sliding_window_dblptr/3090.md
@@ -20,7 +20,7 @@ ShowBreadCrumbs: true
 ShowPostNavLinks: true
 ShowCodeCopyButtons: true
 ---
-+ 不定長的 Sliding Window 直接套
++ 不定長的 Sliding Window 套 pattern
 ```cpp
 class IWindow {
 public:
