--- a/content/leetcode_list/sliding_window_dblptr/2958.md
+++ b/content/leetcode_list/sliding_window_dblptr/2958.md
@@ -1,5 +1,5 @@
 ---
-title: "[LeetCode] 1695. Maximum Erasure Value"
+title: "[LeetCode] 2958. Length of Longest Subarray With at Most K Frequency"
 date: 2022-11-01T20:00:00+08:00
 tags: ["Leetcode"]
 draft: false
