--- a/content/AI/3_7.md
+++ b/content/AI/3_7.md
@@ -20,8 +20,9 @@ ShowReadingTime: true
 ShowBreadCrumbs: true
 ShowPostNavLinks: true
 ShowCodeCopyButtons: true
+mermaid: true
 ---
-
+# 基礎篇
 ## 1. Layer
 + Layer 是神經網路的基本資料處理模組(data-processing module)，可以接受一個或多個張量輸入，再輸出一個或多個張量。Layer 的權重可視為該層的**狀態**(state)，在經過隨機梯度下降法(SGD)不斷更新權重(學習)，最終得到損失值最低的權重值。
 ### 分類
@@ -171,3 +172,485 @@ loss_and_metrics = model.evaluate(val_inputs, val_targets, batch_size=128)
 	```python
 	predictions = model.predict(new_inputs, batch_size=128)
 	```
+
+# 進階篇
+## 建構 Keras 模型的不同方法
++ Keras 建構模型有三種 API 可以選擇
+	1. 序列式模型
+	2. 函數式 API
+	3. 繼承 Model 類別(Model subclassing)
+
+	```mermaid
+	flowchart LR
+    A["序列式API+內建神經層<br/>簡單模型"] --> 
+		B["函數式API+內建神經層<br/>處理一般任務"] --> 
+		C["函數式API+自定神經層<br/>處理特殊任務"] --> 
+		D["使用子類別<br/>研究模型行為"]
+	```
+### 1. 序列式模型 (Sequential Model)
++ 建構 Keras 模型最簡單的做法就是使用 Sequential Model
+```python
+from tensorflow import keras
+from tensorflow.keras import layers
+
+model = keras.Sequential([
+    layers.Dense(64, activation="relu"),
+    layers.Dense(10, activation="softmax")
+])
+```
++ 也可以用 `add()` 來逐步建構模型
+```python
+model = keras.Sequential()
+model.add(layers.Dense(64, activation="relu"))
+model.add(layers.Dense(10, activation="softmax"))
+```
++ 注意，只有在執 行首次呼叫神經層或是呼叫 `build(input_size)` 並輸入指定輸入的 shape 時，才會產生權重。
+```python
+model.build(input_size=(None, 3))
+model.weights
+```
++ 可以透過 `model.summary()` 來檢視模型內容
+```python
+model.summary()
+```
+![summary](/3_7/summary.png)
++ 也可以為模型命名
+```python
+model = keras.Sequential(name="my_sequential_model")
+model.add(layers.Dense(64, activation="relu", name="hidden_layer"))
+model.add(layers.Dense(10, activation="softmax", name="output_layer"))
+model.build(input_shape=(None, 3))
+model.summary()
+```
+![naming](/3_7/naming.png)
++ 也可以提前宣告輸入的 shape
+```python
+model = keras.Sequential()
+model.add(keras.Input(shape=(3,)))
+model.add(layers.Dense(64, activation="relu"))
+model.summary()
+```
+![preclaim](/3_7/preclaim.png)
+
+### 2. 函數式 API (Functional API)
++ 序列式模型的應用範圍比較有限，因為只能建構一層接一層的模型，因此只能建構單一輸入與單一輸出的模型，但實際應用時，我們有可能會遇到多元輸入、多元輸出的情況，或是在模型內部建構，有非線性拓撲(topology)的需求。
+```python
+inputs = keras.Input(shape=(3,), name="funtinoal_api")     # 實際上這一層並非一個神經層，只是用來建立模型輸入點的張量物件
+features = layers.Dense(64, activation="relu")(inputs)
+outputs = layers.Dense(10, activation="softmax")(features)
+model = keras.Model(inputs=inputs, outputs=outputs)
+model.summary()
+```
+![functional_api](/3_7/functional_api.png)
++ 可以查看 layer 的 shape 與 dtype。
+	+ 這樣的 layer 被稱為**符號張量(symbolic tensor)**
+	+ 其中第 0 軸為 None，因為批次量為變數，其量不固定。第 1 軸需與單一樣本的維度相同。
+```python
+print(inputs.shape)
+print(inputs.dtype)
+print(features.shape)
+print(features.dtype)
+
+> (None, 3)
+> float32
+> (None, 64)
+> float32
+```
+
++ 多輸入、多輸出的模型
+```python
+news_size = 10000
+tag_size = 20
+department_size = 5
+
+title = keras.Input(shape=(news_size,), name="title")
+content = keras.Input(shape=(news_size,), name="content")
+tags = keras.Input(shape=(tag_size,), name="tags")
+
+features = layers.Concatenate()([title, content, tags])
+features = layers.Dense(64, activation="relu")(features)
+
+priority = (layers.Dense(1, activation="sigmoid", name="priority")(features))
+department = (layers.Dense(department_size, activation="softmax", name="department")(features))
+
+model = keras.Model(inputs=[title, content, tags], outputs=[priority, department])
+```
+```mermaid
+flowchart TD
+    subgraph Inputs
+        T[title<br/>shape: 10000] --> C[Concatenate]
+        Co[content<br/>shape: 10000] --> C
+        Ta[tags<br/>shape: 20] --> C
+    end
+
+    subgraph Hidden
+        C --> D[Dense Layer<br/>units: 64<br/>activation: relu]
+    end
+
+    subgraph Outputs
+        D --> P[Priority Output<br/>Dense Layer<br/>units: 1<br/>activation: sigmoid]
+        D --> Dep[Department Output<br/>Dense Layer<br/>units: 5<br/>activation: softmax]
+    end
+
+    style T fill:#f9f,stroke:#333,stroke-width:2px
+    style Co fill:#f9f,stroke:#333,stroke-width:2px
+    style Ta fill:#f9f,stroke:#333,stroke-width:2px
+    style C fill:#bbf,stroke:#333,stroke-width:2px
+    style D fill:#bbf,stroke:#333,stroke-width:2px
+    style P fill:#bfb,stroke:#333,stroke-width:2px
+    style Dep fill:#bfb,stroke:#333,stroke-width:2px
+```
++ 訓練多輸入、多輸出模型
+	+ 按順序提供輸入、目標
+	```python
+	import numpy as np
+
+	n = 1280
+
+	title_data = np.random.randint(0, 2, size=(n, news_size))
+	content_data = np.random.randint(0, 2, size=(n, news_size))
+	tags_data = np.random.randint(0, 2, size=(n, tag_size))
+	priority_data = np.random.random(size=(n, 1))
+	department_data = np.random.randint(0, 2, size=(n, department_size))
+
+	model.compile(optimizer="rmsprop",
+								loss=["mean_squared_error", "categorical_crossentropy"],
+								metrics=[["mean_absolute_error"], ["accuracy"]])
+	model.fit([title_data, content_data, tags_data],
+						[priority_data, department_data],
+						epochs=1)
+
+	model.evaluate([title_data, content_data, tags_data],
+								[priority_data, department_data])
+
+	priority_preds, department_preds = model.predict([title_data, content_data, tags_data])
+	```
+
+	+ 使用字典輸入、目標
+	```python
+	import numpy as np 
+
+	n = 1280
+
+	title_data = np.random.randint(0, 2, size=(n, news_size))
+	content_data = np.random.randint(0, 2, size=(n, news_size))
+	tags_data = np.random.randint(0, 2, size=(n, tag_size))
+	priority_data = np.random.random(size=(n, 1))
+	department_data = np.random.randint(0, 2, size=(n, department_size))
+
+	model.compile(
+		optimizer='rmsprop', 
+		loss={
+			"priority": "mean_squared_error",
+			"department": "categorical_crossentropy"}, 
+		metrics={
+			"priority": ["mean_absolute_error"],
+			"department": ["accuracy"]})
+
+	model.fit({
+			"title": title_data,
+			"content": content_data,
+			"tags": tags_data
+	}, {
+			"priority": priority_data,
+			"department": department_data   
+	}, epochs=1)
+
+	model.evaluate({
+			"title": title_data,
+			"content": content_data,
+			"tags": tags_data
+	}, {
+			"priority": priority_data,
+			"department": department_data   
+	})
+
+	priority_preds, department_preds = model.predict({
+			"title": title_data,
+			"content": content_data,
+			"tags": tags_data
+	})
+	```
+
++ 函數式 API 促成了兩個重要的功能:
+	+ 模型視覺化(model visualization)
+	+ 特徵萃取(feature extraction)
+
++ 我們可以用 `plot_model()` 來畫出模型的拓樸結構
+```python
+from keras.utils import plot_model
+plot_model(model, "news_classifier.png")
+```
+![plot_model](3_7/plot_model.png)
+
++ 並且我們可以使用 `model.layers` 來查看神經層的輸入與輸出的張量物件
+```python
+model.layers
+
+> [<InputLayer name=title, built=True>,
+   <InputLayer name=content, built=True>,
+   <InputLayer name=tags, built=True>,
+   <Concatenate name=concatenate, built=True>,
+   <Dense name=dense_14, built=True>,
+   <Dense name=priority, built=True>,
+   <Dense name=department, built=True>]
+```
+
++ 透過函數式 API，我們可以在既有的舊模型架構上，新增新的分支，有利於使用舊模型的中間特徵。
+
++ 範例，在既有模型下，新增一個輸出 **potential**
+```python
+features = model.layers[4].output
+potential = layers.Dense(3, activation="softmax", name="potential")(features)
+new_model = keras.Model([title, content, tags],
+                        [priority, department, potential])
+plot_model(new_model, "new_news_classifier.png", show_layer_names=True)
+```
+![add_output](/3_7/add_output.png)
+### 3. 繼承 Model 類別 (Subclassing the model class)
++ 在 `__init__()` 方法中，定義模型會用到的神經層。
++ 在 `call()` 方法中定義模型中的各神經層的定向傳播流程
++ 實例化定義好的子類別
+
++ 改寫先前的範範為 model 子類別
+```python
+class NewsModel(keras.Model):
+    def __init__(self, n):  
+        super().__init__()   # 要先呼叫父類別的初始化函式
+        self.concat_layer = layers.Concatenate()
+        self.mixing_layer = layers.Dense(64, activation='relu')
+        self.priority_scorer = layers.Dense(1, activation='sigmoid')
+        self.department_scorer = layers.Dense(n, activation='softmax')
+
+    def call(self, inputs):  # 定義正向傳播的過程
+        title = inputs["title"]
+        content = inputs["content"]
+        tags = inputs["tags"]
+        features = self.concat_layer([title, content, tags])
+        features = self.mixing_layer(features)
+        priority = self.priority_scorer(features)
+        department = self.department_scorer(features)
+        return priority, department
+
+model = NewsModel(n=5)
+priority, department = model({
+    "title": title_data,
+    "content": content_data,
+    "tags": tags_data})
+```
++ 進行編譯與訓練
+```python
+model.compile(optimizer='rmsprop',
+              loss=['mean_squared_error', 'categorical_crossentropy'],
+              metrics=[['mean_absolute_error'], ['accuracy']])
+
+model.fit({
+    "title": title_data,
+    "content": content_data,
+    "tags": tags_data
+}, [priority_data, department_data], epochs=1)
+
+model.evaluate({
+    "title": title_data,
+    "content": content_data,
+    "tags": tags_data
+}, [priority_data, department_data])
+
+priority_preds, department_preds = model.predict({
+    "title": title_data,
+    "content": content_data,
+    "tags": tags_data
+})
+```
+
++ Sequential 與 Functional 只能建構有向無環圖(acyclic graph)而在 subclassing 中則沒有限制，我們可以透過在 `call()` 來設計流程，甚至可以用 **for 迴圈** 或是**遞迴(recursion)** 的方式來自由定義。
+
++ 但使用 subclassing 也有缺點
+	+ 無法使用 `summary()` 與 `plot_model()`
+	+ 無法取得神經層的圖節點進行特徵萃取
+
+### Mixing
++ 當然也可以搭配使用
+	+ 含有 model 子類別的函數式模型
+	```python
+	class Classifier(keras.Model):
+			def __init__(self, n):
+					super().__init__()
+					if n == 2:
+							units = 1
+							activation = 'sigmoid'
+					else:
+							units = n
+							activation = 'softmax'
+					self.dense = keras.layers.Dense(units, activation=activation)
+
+			def call(self, inputs):
+					return self.dense(inputs)
+
+	inputs = keras.Input(shape=(3,))
+	features = layers.Dense(64, activation="relu")(inputs)
+	outputs = Classifier(n=10)(features)
+	model = keras.Model(inputs=inputs, outputs=outputs)
+	```
+
+	+ 包有函數式模型的 model 子類別
+	```python
+	inputs = keras.Input(shape=(64,))
+	outputs = layers.Dense(1, activation='sigmoid')(inputs)
+	binary_classifier = keras.Model(inputs, outputs)
+
+	class MyModel(keras.Model):
+			def __init__(self, n):
+					super().__init__()
+					self.dense = layers.Dense(64, activation='relu')
+					self.classifier = binary_classifier
+
+			def call(self, inputs):
+					features = self.dense(inputs)
+					return self.classifier(features)
+
+	model = MyModel(n=5)
+	```
+
+## 設計評量指標
+### 方均根誤差(root mean squared error, RMSE)
+```python
+import tensorflow as tf
+
+class RootMeanSquaredError(tf.keras.metrics.Metric):
+    def __init__(self, name="rmse", **kwargs):
+        super().__init__(name=name, **kwargs)
+        self.mse_sum = self.add_weight(name="mse_sum", initializer="zeros")
+        self.total_samples = self.add_weight(name="total_samples", initializer="zeros", dtype="int32")
+    
+    def update_state(self, y_true, y_pred, sample_weight=None):
+        y_true = tf.one_hot(y_true, depth=tf.shape(y_pred)[1])
+        mse = tf.reduce_sum(tf.square(y_true - y_pred))
+        self.mse_sum.assign_add(mse)
+        num_samples = tf.shape(y_pred)[0]
+        self.total_samples.assign_add(num_samples)
+    
+    def result(self):
+        rmse = tf.sqrt(self.mse_sum / tf.cast(self.total_samples, tf.float32))
+        return rmse
+
+    def reset_state(self):
+        self.mse_sum.assign(0.)
+        self.total_samples.assign(0)
+
+model = get_mnist_model()
+model.compile(optimizer="adam",
+              loss="sparse_categorical_crossentropy",
+              metrics=["accuracy", RootMeanSquaredError()])
+model.fit(train_images, train_labels,
+          epochs=3,
+          validation_data=(val_images, val_labels))
+test_metrics = model.evaluate(test_images, test_labels)
+```
+
+## 使用 callbacks 模組
++ callback 時指在呼叫 `fit()` 方法時可以傳遞給模型的一個物件，並可在訓練階段的各個時間點由模型所呼叫。
++ 可以用於檢視模型狀態及表示，進而執行各類操作如中斷訓練、儲存模型、載入不同權重集合或更改模型狀態。
++ 常見的 callback 模組有：
+	+ `keras.callbacks.ModelCheckpoint`
+	+ `keras.callbacks.EarlyStopping`
+	+ `keras.callbacks.LearningRateSchedular`
+	+ `kears.callbacks.ReduceLROnPlateau`
+	+ `keras.callbacks.CSVLogger`
+
+
+### EarlyStopping + ModelCheckpoint
+```python
+callbacks = [
+    keras.callbacks.EarlyStopping(
+        monitor="val_accuracy",   #監控模型的驗證準確度
+        patience=2,   # 超過兩個週期沒有改善就停止
+    ),
+    keras.callbacks.ModelCheckpoint(       # 在每個週期結束後儲存模型
+        filepath="checkpoint_path.keras",  # 存檔路徑及檔名
+        monitor="val_loss",
+        save_best_only=True,               # 當 val_loss 有改善時才儲存模型
+    )
+]
+
+model = get_mnist_model()
+model.compile(optimizer="adam",
+              loss="sparse_categorical_crossentropy",
+              metrics=["accuracy"])   # 對應到監控
+model.fit(train_images, train_labels,
+          epochs=10,
+          callbacks=callbacks,       # 在 training 時加入 callbacks
+          validation_data=(val_images, val_labels))  # 一定要加入驗證集
+```
+
+### 設計 custom callback
++ 有以下的呼叫時間點的方法可以自定義:
+	+ `on_epoch_begin(epoch, logs)`  # 在每個訓練週期的開始時呼叫 
+	+ `on_epoch_end(epoch, logs)`    # 在每個訓練週期的結束時呼叫
+	+ `on_batch_begin(batch, logs)`  # 在處理每個批次資料前呼叫
+	+ `on_batch_end(batch, logs)`    # 在處理每個批次資料後呼叫
+	+ `on_train_begin(logs)` 			   # 在訓練開始時呼叫
+	+ `on_train_end(logs)`   			   # 在訓練結果時呼叫
+```python
+from matplotlib import pyplot as plt
+
+class LossHistory(keras.callbacks.Callback):
+	def on_train_begin(self, logs):
+		self.per_batch_losses = []
+
+	def on_batch_end(self, batch, logs):
+		self.per_batch_losses.append(logs.get('loss'))
+
+	def on_epoch_end(self, epoch, logs):
+		plt.clf()
+		plt.plot(range(len(self.per_batch_losses)),
+			self.per_batch_losses,
+			label='Training loss for each batch')
+		plt.xlabel(f'Batch (epoch {epoch})')
+		plt.ylabel("Loss")
+		plt.legend()
+		plt.savefig(f"plot_at_epoch_{epoch}")
+		self.per_batch_losses = []
+
+model = get_mnist_model()
+model.compile(optimizer="adam",
+              loss="sparse_categorical_crossentropy",
+              metrics=["accuracy"])
+model.fit(train_images, train_labels,
+          epochs=10,
+          callbacks=[LossHistory()],
+          validation_data=(val_images, val_labels))
+```
+
+# 實作演練
++ 重心在實作一次 mnist
+```python
+from tensorflow import keras
+from tensorflow.keras import layers
+from tensorflow.keras.datasets import mnist
+
+def get_mnist_model():
+    inputs = keras.Input(shape=(28 * 28,))
+    features = layers.Dense(512, activation="relu")(inputs)
+    features = layers.Dropout(0.5)(features)
+    outputs = layers.Dense(10, activation="softmax")(features)
+    model = keras.Model(inputs=inputs, outputs=outputs)
+    return model
+
+(images, labels), (test_images, test_labels) = mnist.load_data()
+images = images.reshape((60000, 28 * 28)).astype("float32") / 255
+test_images = test_images.reshape((10000, 28 * 28)).astype("float32") / 255
+train_images, val_images = images[10000:], images[:10000]
+train_labels, val_labels = labels[10000:], labels[:10000]
+
+model = get_mnist_model()
+model.compile(optimizer="adam",
+              loss="sparse_categorical_crossentropy",
+              metrics=["accuracy"])
+model.fit(train_images, train_labels, epochs=3,
+          validation_data=(val_images, val_labels))
+test_metrics = model.evaluate(test_images, test_labels)
+predictions = model.predict(test_images)
+print(test_metrics)
+```
+
