--- a/content/AI/3_7.md
+++ b/content/AI/3_7.md
@@ -622,6 +622,29 @@ model.fit(train_images, train_labels,
           validation_data=(val_images, val_labels))
 ```
 
+## 使用 TensorBoard
++ TensorBoard 是一個以瀏覽器為基礎的視覺化工具，可以在本地端運行。可以用來在訓練進行時，監控模型內部變化的最佳方法。
++ 使用的方法是在 `fit()` 中引入 `keras.callbacks.TensorBoard`。
+```python
+model = get_mnist_model()
+model.compile(optimizer="adam",
+              loss="sparse_categorical_crossentropy",
+              metrics=["accuracy"])
+tensorboard = keras.callbacks.TensorBoard(
+    log_dir="/tensor_board_log"  # 定記錄檔案的寫入位置
+)
+model.fit(train_images, train_labels,
+          epochs=10,
+          validation_data=(val_images, val_labels),
+          callbacks=[tensorboard])
+```
++ 接著輸入以下指令開啟 TensorBoard 介面
+```python
+%load_ext tensorboard
+%tensorboard --logdir /tensor_board_log
+```
+![tensorboard](./3_7/tensorboard.png)
+
 # 實作演練
 + 重心在實作一次 mnist
 ```python
