--- a/content/leetcode_list/sliding_window_dblptr/2555.md
+++ b/content/leetcode_list/sliding_window_dblptr/2555.md
@@ -20,35 +20,26 @@ ShowBreadCrumbs: true
 ShowPostNavLinks: true
 ShowCodeCopyButtons: true
 ---
-+ 這一題困難的部分在於計算 windows size
-+ 我的作法是根據 `startPos + i` 來計算左指針，左指針位置會在 `startPos - max(k - 2*i, (k - i) / 2)`，也就是算出左邊來回或是右邊來回兩種情況下， windowSize 最大的可能。
++ 這一題的關鍵在於追縱離開 window 時的數字，可以滿足的最大值，所以可以用 dp + sliding window 來解這一題。
 ```cpp
 class Solution {
 public:
-    int maxTotalFruits(vector<vector<int>>& fruits, int startPos, int k) {
-        sort(fruits.begin(), fruits.end());
-        int curr = 0;
-        int j = 0;
-        while (j < fruits.size() && fruits[j][0] < startPos - k) j++;
-        int u = j;
-        for (int i = startPos - k; i <= startPos && j < fruits.size(); i++) {
-            if (fruits[j][0] == i) curr += fruits[j++][1];
-        }
-        if (j == fruits.size()) return curr;
-        int res = curr;
-        int left = startPos - k;
-        
-        for (int i = 1; i <= k && j < fruits.size(); i++) {
-            int right = startPos + i;
-            int pos = startPos - max(k - 2*i, (k - i)/2);
-            if (fruits[j][0] == right) curr += fruits[j++][1];
-            while (left < pos) {
-                if (fruits[u][0] == left++) curr -= fruits[u++][1];
+    int maximizeWin(vector<int>& nums, int k) {
+        int n = nums.size(), left = 0, right = 0, res = 0;
+        unordered_map<int,int> dp;
+        int missed = 0;
+        while (right < n) {
+            while (right + 1 < n && nums[right] == nums[right+1]) right++;
+            if (nums[right] - nums[left] > k) {
+                while (nums[right] - nums[left] > k) {
+                    missed = max(missed, dp[nums[left++]]);
+                }
             }
-            res = max(res, curr);
+            dp[nums[right]] = right - left + 1;
+            right++; 
+            res = max(res, right - left + missed);
         }
         return res;
     }
 };
-
 ```
